# compose-x-firelens-examples

./: .gitignore  LICENSE  README.rst  pyproject.toml
examples/declare_firelens_with_cw_plugin/: README.rst  docker-compose.yaml
examples/declare_firelens_with_firehose_plugin/: README.rst  docker-compose.yaml
examples/enable_api_healthcheck_and_set_grace_period/: README.rst  docker-compose.yaml
examples/enable_nginx_parser_using_source_file/: README.rst  docker-compose.yaml  nginx-parsing.conf
examples/replace_awslogs/: README.rst  docker-compose.yaml
examples/x_kinesis_firehose_with_firelens_advanced/: README.rst  docker-compose.yaml
examples/x_kinesis_firehose_with_options_delivery_name/: README.rst  docker-compose.yaml
