[tool.poetry]
name = "compose-x-firelens-examples"
version = "0.1.0"
description = ""
authors = ["John Preston <john@ews-network.net>"]

[tool.poetry.dependencies]
python = "^3.10"
ecs-composex = "^0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
